--- a/chatbot-frontend/src/components/chatHeader/chatHeader.scss
+++ b/chatbot-frontend/src/components/chatHeader/chatHeader.scss
@@ -1,14 +1,16 @@
 .chat-head {
-  //   border: 2px solid red;
+  // border: 2px solid red;
   //   gap: 1vw;
   padding: 0 1vw;
   justify-content: space-between;
+  // margin-bottom: 0.6vw;
+  margin-top: 0.6vw;
   .first-icon {
     gap: 1vw;
     // border: 2px solid red;
   }
   .icons {
-    font-size: 1.6vw;
+    font-size: 1.3vw;
     color: black;
     font-weight: 800;
   }
@@ -17,23 +19,23 @@
     padding-right: 5vw;
     // border: 2px solid red;
     background: #fff;
-    padding: 0.4vw 1.5vw;
+    padding: 0.2vw 1vw;
     border-radius: 2vw;
-    gap: 0.8vw;
+    gap: 0.5vw;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 15px;
   }
   .chatbot-icon {
     // border: 2px solid red;
-    font-size: 1.2vw;
+    font-size: 1vw;
     background: #ffcb47;
-    padding: 0.4vw;
-    border-radius: 1vw;
+    padding: 0.3vw;
+    border-radius: 50%;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   }
 
   .txts {
     // border: 2px solid red;
-    font-size: 1.2vw;
+    font-size: 0.9vw;
     color: black;
   }
 }
