--- a/chatbot-frontend/src/components/chatbot/chatbot.scss
+++ b/chatbot-frontend/src/components/chatbot/chatbot.scss
@@ -1,13 +1,12 @@
 .chatbot-box {
   position: relative;
-  max-width: 260px;
-  max-height: 400px;
-  min-height: 400px;
-  overflow-y: auto;
+  max-width: 300px;
+  height: 450px;
+  // overflow-y: auto;
   margin: auto;
   font-family: sans-serif;
   // border: 1px solid #ccc;
-  padding: 1vw;
+  padding: 0.2vw;
   border: 1px solid black;
   border-radius: 2vw;
   background: linear-gradient(to bottom, #fced44, #f6f6f6);
@@ -16,12 +15,29 @@
 }
 
 .chat-window {
-  // max-height: 200px;
+  max-height: 360px;
+  overflow-y: auto;
+  padding-top: 2.4vw;
+  padding-left: 0.5vw;
+  padding-right: 1vw;
+  scrollbar-width: thin;
+  scrollbar-color: #909194 #fff;
+  .chat-window::-webkit-scrollbar {
+    width: 2px;
+  }
 
-  margin-bottom: 1rem;
-  padding: 3vw 1vw;
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
 
-  // border: 1px solid #ccc;
+  &::-webkit-scrollbar-thumb {
+    background-color: transparent;
+    border-radius: 10px;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: #1d62ea;
+  }
 }
 
 .message-part {
@@ -33,6 +49,7 @@
   // border: 1px solid #c31818;
   gap: 0.8vw;
   justify-content: flex-start;
+  align-items: flex-start;
 }
 
 .chatbot-icon {
@@ -44,46 +61,94 @@
   border-radius: 50%;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
+.user-icon {
+  // border: 2px solid red;
+  font-size: 1.5vw;
+  background: rgb(175, 175, 175);
+  padding: 0.4vw;
+  border-radius: 50%;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
 .message.bot {
   width: 65%;
   // border: 1px solid #c31818;
   background: #fff;
-  padding: 0.9vw;
-  margin-bottom: 0.5rem;
+  padding: 0.6vw;
+  margin-bottom: 0.8vw;
   border-top-left-radius: 1vw;
   border-bottom-right-radius: 1vw;
   border-top-right-radius: 1vw;
   text-align: left;
-  font-size: 1.15vw;
+  font-size: 1vw;
+  line-height: 1.15vw;
   box-shadow: rgba(0, 0, 0, 0.2) 3px 5px 10px;
 }
 
 .message.user {
   background: #1d62ea;
-  padding: 0.9vw;
-  margin-bottom: 1vw;
-  margin-top: 1vw;
+  padding: 0.6vw;
+  margin-bottom: 0.8vw;
+  margin-top: 0.4vw;
   border-top-left-radius: 1vw;
   border-bottom-left-radius: 1vw;
   border-top-right-radius: 1vw;
   text-align: right;
-  font-size: 1.15vw;
+  font-size: 1vw;
   color: #fff;
   box-shadow: rgba(0, 0, 0, 0.2) 3px 5px 10px;
 }
 
+.typing-indicator {
+  display: flex;
+  gap: 4px;
+  align-items: center;
+  justify-content: center;
+  height: 20px;
+
+  span {
+    display: block;
+    width: 6px;
+    height: 6px;
+    background-color: #888;
+    border-radius: 50%;
+    animation: typing 1.2s infinite ease-in-out;
+  }
+
+  span:nth-child(2) {
+    animation-delay: 0.2s;
+  }
+
+  span:nth-child(3) {
+    animation-delay: 0.4s;
+  }
+
+  @keyframes typing {
+    0%,
+    80%,
+    100% {
+      transform: scale(0.8);
+      opacity: 0.5;
+    }
+    40% {
+      transform: scale(1.2);
+      opacity: 1;
+    }
+  }
+}
+
 .otp-container {
-  // margin: 0;
-  width: 82%;
+  margin-top: 1vw;
+  margin-bottom: 1vw;
+  width: 87%;
   // border: 2px solid red;
   align-items: flex-start;
-  gap: 1vw;
-  padding: 0.8vw;
+  gap: 0.7vw;
+  // padding: 0.8vw;
 }
 .options {
   width: 100%;
   // border: 2px solid red;
-  padding: 1vw 0.5vw;
+  padding: 1vw 0.4vw;
   background: #fff;
   // width: 100%;
   gap: 0.5vw;
@@ -95,18 +160,23 @@
 .opt-bg {
   border-radius: 1vw;
   background: #ebeaea;
-  padding-right: 1.5vw;
+  padding-right: 0.6vw;
   width: 88%;
   // justify-content: flex-start;
   justify-content: space-between;
+  // border: 2px solid red;
+}
+
+.opt-bg:hover {
+  outline: 1.5px solid #1d62ea;
 }
 
 .options button {
   text-align: start;
-  margin: 5px;
-  padding: 5px;
+  margin: 3px;
+  padding: 3px;
   cursor: pointer;
-  font-size: 1.15vw;
+  font-size: 1vw;
   font-weight: 500;
   color: black;
   border: none;
@@ -121,11 +191,14 @@
   border-radius: 50%;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
+.opt-bg:hover .arrow-icon {
+  background: #1d62ea;
+}
 
 .chat-footer {
   width: 100%;
   position: absolute;
-  bottom: 7%;
+  bottom: 4%;
   left: 0;
   // outline: 0.13vw solid #1d62ea;
 }
@@ -134,7 +207,7 @@
   // outline: 0.13vw solid #1d62ea;
   // width: 90%;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
-  margin: 2vw;
+  margin: 1.5vw;
   gap: 1vw;
   padding: 0vw 1vw;
   justify-content: space-between;
@@ -151,12 +224,12 @@
   background: none;
   height: 40px;
   padding: 0 0.5vw;
-  font-size: 1.3vw;
+  font-size: 1.1vw;
 }
 
 .send-icon {
   color: #1d62ea;
-  font-size: 1.8vw;
+  font-size: 1.5vw;
   cursor: pointer;
 }
 .send-icon:hover {
@@ -164,8 +237,11 @@
 }
 
 .poweredBy {
+  position: absolute;
+  width: 90%;
   gap: 0.2vw;
-  padding-top: 19.9vw;
+  bottom: 1%;
+
   // border: 2px solid red;
   .powerTxt {
     padding-top: 1vw;
